--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>borrador</title>
 </head>
 <body>
-    <h1>Hola esta es mi pagina html para hacer con Github 😊😊😊😊😊</h1>
+    <h1>Hola esta es mi pagina html para hacer con Github 😒😒</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore quam illum fuga nobis iste tempora, cupiditate quisquam illo perferendis adipisci obcaecati expedita, inventore mollitia consectetur porro, eveniet in ullam? Possimus iste explicabo, voluptatem commodi laborum nobis blanditiis, expedita quam, ducimus qui placeat iure id molestias odio nesciunt est! Voluptatum, quas cum deleniti dolorem accusamus placeat iste maiores minima perferendis rerum quia iure reiciendis ea magnam a perspiciatis, iusto adipisci vero deserunt ipsa. Illo commodi quaerat quo incidunt quasi laudantium rerum excepturi cupiditate, voluptatem deleniti eligendi laboriosam quae sed non nihil. Pariatur ad voluptatibus eius harum officiis beatae, facere id at.</p>
 </body>
 </html>
