Creamos un nuevo archivo contacto dentro de la rama 3

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Hola esta es mi pagina html para hacer con Github 😒😒</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore quam illum fuga nobis iste tempora, cupiditate quisquam illo perferendis adipisci obcaecati expedita, inventore mollitia consectetur porro, eveniet in ullam? Possimus iste explicabo, voluptatem commodi laborum nobis blanditiis, expedita quam, ducimus qui placeat iure id molestias odio nesciunt est! Voluptatum, quas cum deleniti dolorem accusamus placeat iste maiores minima perferendis rerum quia iure reiciendis ea magnam a perspiciatis, iusto adipisci vero deserunt ipsa. Illo commodi quaerat quo incidunt quasi laudantium rerum excepturi cupiditate, voluptatem deleniti eligendi laboriosam quae sed non nihil. Pariatur ad voluptatibus eius harum officiis beatae, facere id at.</p>
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, sint. Modi quas alias maxime dolorum placeat eveniet earum nisi inventore exercitationem. Natus tenetur eius blanditiis, amet eos ipsam dolore eligendi, cum, suscipit sed repellendus quod consequatur. Id magnam nihil consequatur pariatur eius vero consequuntur ratione. Et asperiores sint consequatur. Necessitatibus.</p>
 </body>
 </html>
