--- a/informacion.html
+++ b/informacion.html
@@ -9,6 +9,7 @@
     <h1>Esta pagina es la de Informacion</h1>
 
     <a href="http://127.0.0.1:5500/index.html">pagina (index)</a>
+    <p>ese link nos lleva desde informacion a main</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit quos quo aperiam quas molestiae, aliquid ducimus, adipisci tempora, laudantium tempore doloribus in tenetur praesentium ipsum culpa numquam iusto nesciunt nobis iste? Reprehenderit quibusdam debitis repellat accusantium rerum quam totam pariatur laborum? Aliquam molestiae quae aut numquam reiciendis esse officiis similique.</p>
     <h2> Aqui es un segundo titulo</h2>
     
